# fullStar

./: .env.example  .gitignore  README.en.md  README.ja.md  README.md  mob  oneClickSetup.sh  oneClickStart.sh
docs/: FEATURES.md  TASKS.md
lockmac/: README.md  install.sh
lockmac/Formula/: lockmac.rb
lockmac/docs/: USAGE.md
lockmac/lockmac/: cli.py  core.py  overlay.swift  tg.py  totp.py
lockmac/packaging/: README.md  build-pkg.sh
mac-veil/: README.md  pyproject.toml
mac-veil/mac_veil/: __init__.py  cli.py  core.py
mac-veil/tests/: test_core.py
scripts/: claude-tg-hook.sh  install-skill.sh
term-bridge/: access_hint.py  agent_cli.py  agent_status.py  chat_allowlist.py  git_diff_report.py  interactive_prompt.py  iterm-inject.py  iterm-monitor.py  iterm-screenshot.py  iterm_extract.py  iterm_route.py  iterm_shot.py  iterm_tabs.py  iterm_target.py  mac-veil.swift  mac_veil.py  message_guard.py  pipeline_doctor.py  rate_limit.py  target_default.py  terminal-inject.py  terminal-spawn.py  terminal_inject_lib.py  terminal_tabs.py  test_access_hint.py  test_agent_cli.py  test_agent_status.py  test_approve_mode.py  test_chat_allowlist.py  test_extract_options.py  test_git_diff_report.py  test_interactive_prompt.py  test_iterm_dedup.py  test_iterm_fallback.py  test_iterm_key.py  test_iterm_route_default.py  test_iterm_route_match.py  test_iterm_shot.py  test_iterm_target_session_id.py  test_mac_veil.py  (+22 more)
tg-relay/: get-chat-id.sh  setup-telegram.sh  test_tg_tab_command.py  tg-relay.py  tg-stack-daemon.sh  tg_relay_patches.py  tg_tab_command.py
(+15 files in other folders)
